tests/fail/registering/dummy variable with a pure sort.mm0
 strict    sort s ; 
term a (x : s) : s ; 
